...
        );


        return Scaffold(
          appBar: AppBar(
            title: Text(
              'Details Screen',
              style: context.titleLarge!.copyWith(color: context.colors.onPrimary),
            ),
          ),
          body: Builder(
            builder: (context) {
              if (isLoading) {
...
